# m3dp_Orcaslicer_Script_Runner

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  COMMIT_GUIDE.md  CORE_EXTRACTION_COMPLETE.md  DEV_COMMANDS.md  LINTING_EXCEPTIONS.md  LINTING_FIXES_APPLIED.md  LINTING_SETUP.md  README.md  RUFF_PRECOMMIT_COMPLETE.md  TODO.md  VSCODE_SETUP.md  m3dp_Orcaslicer_Script_Runner.code-workspace  main.py  pyproject.toml  test_core.py  test_job_features.py
app/: __init__.py  logging_config.py  main.py  metrics.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  api.py  bricklayers_core.py
app/middleware/: __init__.py  logging.py  rate_limit.py  security_headers.py
app/models/: __init__.py  errors.py  processing.py  upload.py
app/routers/: __init__.py  health.py  jobs.py  metrics.py  upload.py
app/security/: __init__.py  content_scanner.py
app/services/: __init__.py  cleanup_service.py  file_service.py  processing_service.py
docs/: BACKGROUND_JOBS.md  BACKGROUND_JOBS_EVALUATION.md  FASTAPI_STRUCTURE.md  FILE_UPLOAD_OPTIMIZATION.md  METRICS.md  SECURITY_ENHANCEMENTS.md  STRUCTURED_LOGGING.md
g-code/: 3DBenchy_PLA_GeekDetour.gcode  3DBenchy_PLA_NoScripts.gcode
research/: OrcaSlicer Pre_Post-Processing Scripts Research.md
tests/: test_cleanup_service.py  test_upload_limits.py  test_upload_process_download.py  test_upload_validation.py
