[project]
name = "m3dp-orcaslicer-script-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.14.4",
]

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 100

# Source code location
src = ["app", "scripts"]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rules + additional helpful ones
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
]

# Rules to ignore
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults (FastAPI uses this)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
# Allow print statements in scripts
"scripts/**/*.py" = ["T201"]
# BrickLayers core: Preserve original code style and mathematical notation
"app/core/bricklayers_core.py" = [
    "E402",   # Module import not at top - intentional logical grouping
    "E712",   # Comparison to True - emphasizes critical state checks
    "E741",   # Ambiguous variable name - mathematical notation (I, J for arcs)
    "N803",   # Argument should be lowercase - mathematical notation (Cx, Cy, etc.)
    "N806",   # Variable should be lowercase - mathematical notation (P, C, T, I, J)
    "F841",   # Unused variable - debugging artifacts and future placeholders
    "B905",   # zip() without strict= - works correctly by construction
    "RUF003", # Ambiguous unicode character - from original source
    "SIM102", # Nested if statements - improves readability over combining
    "SIM108", # Ternary operator - explicit if-else is more debuggable
]
# Original BrickLayers script: Preserve as-is (not part of web app)
"scripts/BrickLayers/bricklayers.py" = ["ALL"]

[tool.ruff.format]
# Use double quotes by default
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
